--- a/css/main.css
+++ b/css/main.css
@@ -79,6 +79,10 @@ a{
     padding-block: 1.25rem;
 }
 
+html{
+    scroll-behavior: smooth;
+}
+
 /*header*/
 
 header{
@@ -101,7 +105,9 @@ header .nav-list-item{
     border:2px solid transparent;
 }
 
-
+.close{
+    display: none;
+}
 header .nav-list-item:hover a,
 header .nav-list-item a.active{
     color: var(--main-clr);
@@ -118,6 +124,25 @@ header .nav-list-item a.active::after{
     bottom: 0;
     left: 0;
 }
+.shopping-cart{
+    position: relative;
+}
+.shopping-cart i{
+    color: var(--main-clr);
+}
+.counter{
+    padding: 0.1rem;
+    border-radius: 4px;
+    position: absolute;
+    top: -0.6rem;
+    right: -0.5rem;
+    background-color: #222;
+    color: #cdd4f8;
+    text-align: center;
+}
+.hide{
+    display: none;
+}
 .burger-icon{
     display: none;
 }
@@ -132,32 +157,48 @@ header .nav-list-item a.active::after{
     header{
         position: relative;
     }
-    nav{
-        display: none;
-    }
     nav .nav-list{
+        width: 12.5rem;
         padding-block-start: 1rem;
         text-align: center;
         background-color: var(--main-background-clr);
-        position: absolute;
-        left: 0;
-        top: 3.5rem;
-        z-index: -1;
+        position: fixed;
+        right: -13rem;
+        top: 0;
+        z-index: 1;
         padding-inline: 1.25rem;
         flex-direction: column;
-            box-shadow: 0px 1px 15px #000;
+        background-color: #cdd4f8;
+        height: 100vh;
+        transition: 0.2s;
     }
-    nav .nav-list,
-    nav .nav-list a {
+    .right{
+        right: 0 !important;
+    }
+    .layout{
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100vw;
+        height: 100vh;
+        background-color: rgb(33, 33, 33, 50%);
+    }
+    .close{
+        width: 1.25rem;
+        margin-inline: auto ;
         display: block;
-        width: 100%;
-    }
+        border: 2px solid #222;
+        border-radius: 50%;
+        margin-bottom: 1.25rem;
+        }
     .burger-icon{
         cursor: pointer;
         display: block;
         padding: .75rem;
     }
-
+    .shopping-cart{
+        margin-inline-start: auto;
+    }
 }
 
 
@@ -204,7 +245,7 @@ header .nav-list-item a.active::after{
 }
 .hero button{
     cursor: pointer;
-    color: var(--main-clr);
+
     font-weight:700;
     padding: 1rem 5rem;
     background-color: transparent;
@@ -212,7 +253,10 @@ header .nav-list-item a.active::after{
     background-repeat: no-repeat;
     border: none;
 }
-.hero button:hover{
+.hero button a{
+    color: var(--main-clr);
+}
+.hero button a:hover{
     color: var(--main-background-clr);
 }
 @media (width<48rem){
@@ -241,8 +285,7 @@ header .nav-list-item a.active::after{
     box-shadow: 1.25rem 1.25rem 2.125rem rgba(0,0,0,0.03);
 }
 .feature:hover{
-    cursor: pointer;
-    box-shadow: 0.625rem 0.625rem 3.375rem rgba(70, 62, 221, 0.1);
+    box-shadow: 0.625rem 0.625rem 3.375rem rgba(15, 13, 44, 0.1);
 }
 .feature h6{
     color: var(--main-clr);
@@ -325,9 +368,14 @@ header .nav-list-item a.active::after{
     border-radius: 50%;
 }
 .products-list .product .add-to-cart i{
-    color: var(--main-clr);
+    color: var(--para-clr);
 }
 
+
+/*added to carther*/
+.added-to-cart i{
+    color: var(--main-clr) !important;
+}
 
 
 @media (width<62rem) {
